feat(backend): introduce dynamic scout identity resolution API
Added ScoutController exposing endpoints to fetch scout details by license number (e.g. SCT-001). Added supporting lookup functions in ScoutService and modified ScoutingReportService and ViewPlayersListService to resolve watched/observed matches based on player-scout relationships. Removed unused controller stubs and updated GlobalExceptionHandler.